--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "elevenlabs": "^1.50.2",
     "eslint-config-next": "^14.2.15",
+    "form-data": "^4.0.1",
     "framer-motion": "^11.11.4",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.7.1",
     "next": "^14.2.15",
+    "openai": "^4.78.1",
     "postcss": "8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
