--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@clerk/nextjs": "^4.21.8",
     "@clerk/themes": "^1.7.5",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@shadcn/ui": "^0.0.4",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.7.0",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "elevenlabs": "^1.50.2",
     "eslint-config-next": "^14.2.15",
@@ -32,7 +35,7 @@
     "react-icons": "^5.3.0",
     "react-toastify": "^11.0.2",
     "svix": "^1.45.1",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7"
   }
